# ojoalcontrato

./: .gitignore  LICENSE  README.md  pyproject.toml
ojoalcontrato/: __init__.py  deteccion.py  secop.py  server.py
skill/: SKILL.md
